text spacing issue fixed

--- a/client/src/components/css/Image.css
+++ b/client/src/components/css/Image.css
@@ -53,7 +53,7 @@
 .profile-image {
   height: 32px;
   border-radius: 50%;
-  margin: 10px;
+  margin-left: 10px;
 }
 
 .material-icons {
@@ -76,6 +76,7 @@
 .username a {
   color: white;
   text-decoration: none;
+  padding: 10px;
 }
 
 .username a:hover {
